demo-applications/event-discovery/mailpit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  labels:
    app: mailpit
spec:
  selector:
    app: mailpit
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: web
      protocol: TCP
      port: 8025
      targetPort: 8025
